--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "swipe-tale",
+  "name": "parallel-timelines",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
@@ -22,7 +22,9 @@
     "@angular/platform-browser": "^19.2.4",
     "@angular/platform-browser-dynamic": "^19.2.4",
     "@angular/router": "^19.2.4",
+    "@capacitor/android": "^7.2.0",
     "@capacitor/core": "^7.2.0",
+    "@capacitor/ios": "^7.2.0",
     "@knight-lab/timelinejs": "^3.9.7",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
