--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@capacitor/android": "^7.2.0",
     "@capacitor/core": "^7.2.0",
     "@capacitor/ios": "^7.2.0",
+    "hammerjs": "^2.0.8",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
@@ -34,8 +35,8 @@
     "@angular/cli": "^19.2.5",
     "@angular/compiler-cli": "^19.2.4",
     "@capacitor/cli": "^7.2.0",
-    "@tailwindcss/postcss": "^4.0.17",
     "@types/jasmine": "~5.1.0",
+    "autoprefixer": "^10.4.21",
     "jasmine-core": "~5.1.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
@@ -45,7 +46,8 @@
     "less": "^4.2.2",
     "less-loader": "^12.2.0",
     "postcss": "^8.5.3",
-    "tailwindcss": "^4.0.17",
+    "tailwindcss": "^3.4.17",
+    "tailwindcss-safe-area": "^0.6.0",
     "typescript": "~5.8.2"
   }
 }
