--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -4,11 +4,11 @@ android {
     namespace "org.tlc.paralleltimelines"
     compileSdk rootProject.ext.compileSdkVersion
     defaultConfig {
-        applicationId "org.tlc.paralleltimelines"
+        applicationId "org.crowlanguage.crowtimeline"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
-        versionCode 1
-        versionName "1.0"
+        versionCode 5
+        versionName "0.1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         aaptOptions {
              // Files and dirs to omit from the packaged assets dir, modified to accommodate modern web apps.
@@ -18,7 +18,7 @@ android {
     }
     buildTypes {
         release {
-            minifyEnabled false
+            minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
