--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -4,11 +4,11 @@ android {
     namespace "org.tlc.paralleltimelines"
     compileSdk rootProject.ext.compileSdkVersion
     defaultConfig {
-        applicationId "org.company.paralleltimelines"
+        applicationId "org.crowlanguage.crowtimeline"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
-        versionCode 1
-        versionName "0.1.0"
+        versionCode 6
+        versionName "0.1.1"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         aaptOptions {
              // Files and dirs to omit from the packaged assets dir, modified to accommodate modern web apps.
